Source/WebCore/inspector/InspectorDOMStorageAgent.h
@@ -39,8 +39,8 @@ namespace WebCore {
 
 class Frame;
 class InspectorArray;
-class InspectorDOMStorageResource;
 class InspectorFrontend;
+class InspectorPageAgent;
 class InspectorState;
 class InstrumentingAgents;
 class Page;
@@ -51,44 +51,40 @@ typedef String ErrorString;
 
 class InspectorDOMStorageAgent : public InspectorBaseAgent<InspectorDOMStorageAgent>, public InspectorBackendDispatcher::DOMStorageCommandHandler {
 public:
-    static PassOwnPtr<InspectorDOMStorageAgent> create(InstrumentingAgents* instrumentingAgents, InspectorCompositeState* state)
+    static PassOwnPtr<InspectorDOMStorageAgent> create(InstrumentingAgents* instrumentingAgents, InspectorPageAgent* pageAgent, InspectorCompositeState* state)
     {
-        return adoptPtr(new InspectorDOMStorageAgent(instrumentingAgents, state));
+        return adoptPtr(new InspectorDOMStorageAgent(instrumentingAgents, pageAgent, state));
     }
     ~InspectorDOMStorageAgent();
 
     virtual void setFrontend(InspectorFrontend*);
     virtual void clearFrontend();
-    void restore();
-
-    void clearResources();
 
     // Called from the front-end.
     virtual void enable(ErrorString*);
     virtual void disable(ErrorString*);
-    virtual void getDOMStorageEntries(ErrorString*, const String& storageId, RefPtr<TypeBuilder::Array<TypeBuilder::Array<String> > >& entries);
-    virtual void setDOMStorageItem(ErrorString*, const String& storageId, const String& key, const String& value, bool* success);
-    virtual void removeDOMStorageItem(ErrorString*, const String& storageId, const String& key, bool* success);
+    virtual void getDOMStorageItems(ErrorString*, const RefPtr<InspectorObject>& storageId, RefPtr<TypeBuilder::Array<TypeBuilder::Array<String> > >& items);
+    virtual void setDOMStorageItem(ErrorString*, const RefPtr<InspectorObject>& storageId, const String& key, const String& value);
+    virtual void removeDOMStorageItem(ErrorString*, const RefPtr<InspectorObject>& storageId, const String& key);
 
     // Called from the injected script.
     String storageId(Storage*);
-    String storageId(SecurityOrigin*, bool isLocalStorage);
+    PassRefPtr<TypeBuilder::DOMStorage::StorageId> storageId(SecurityOrigin*, bool isLocalStorage);
 
     // Called from InspectorInstrumentation
-    void didUseDOMStorage(StorageArea*, bool isLocalStorage, Frame*);
     void didDispatchDOMStorageEvent(const String& key, const String& oldValue, const String& newValue, StorageType, SecurityOrigin*, Page*);
 
     virtual void reportMemoryUsage(MemoryObjectInfo*) const OVERRIDE;
 
 private:
-    InspectorDOMStorageAgent(InstrumentingAgents*, InspectorCompositeState*);
 
-    InspectorDOMStorageResource* getDOMStorageResourceForId(const String& storageId);
+    InspectorDOMStorageAgent(InstrumentingAgents*, InspectorPageAgent*, InspectorCompositeState*);
 
-    typedef HashMap<String, RefPtr<InspectorDOMStorageResource> > DOMStorageResourcesMap;
-    DOMStorageResourcesMap m_resources;
+    bool isEnabled() const;
+    PassRefPtr<StorageArea> findStorageArea(ErrorString*, const RefPtr<InspectorObject>&, Frame*&);
+
+    InspectorPageAgent* m_pageAgent;
     InspectorFrontend* m_frontend;
-    bool m_enabled;
 };
 
 } // namespace WebCore
