third_party/WebKit/Source/WebCore/dom/WebCoreMemoryInstrumentation.cpp
@@ -61,7 +61,6 @@ MemoryObjectType WebCoreMemoryTypes::Inspector = "WebInspector";
 MemoryObjectType WebCoreMemoryTypes::InspectorController = "WebInspector";
 MemoryObjectType WebCoreMemoryTypes::InspectorMemoryAgent = "WebInspector";
 MemoryObjectType WebCoreMemoryTypes::InspectorDOMStorageAgent = "WebInspector";
-MemoryObjectType WebCoreMemoryTypes::InspectorDOMStorageResources = "WebInspector";
 MemoryObjectType WebCoreMemoryTypes::InspectorOverlay = "WebInspector";
 MemoryObjectType WebCoreMemoryTypes::InspectorProfilerAgent = "WebInspector";
 MemoryObjectType WebCoreMemoryTypes::InspectorDebuggerAgent = "WebInspector";
